--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 body {
-    background-color: rgb(24, 25, 27);
+    background: rgb(3,1,0);
+    background: linear-gradient(0deg, rgba(3,1,0,1) 46%, rgba(195,42,34,1) 100%);
+}
+
+img {
+    object-fit: cover;
+}
+input {
+    width: 160px;
+    text-align: center;
 }
